paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_001/target.compile.log
error[E0614]: type `f32` cannot be dereferenced
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_001/target.rs:26:14
   |
26 |         s += **pp[i as usize] as i32;
   |              ^^^^^^^^^^^^^^^^ can't be dereferenced

error[E0614]: type `f32` cannot be dereferenced
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_001/target.rs:34:14
   |
34 |     let s2 = **afp2[0] as i32 + **afp2[16] as i32;
   |              ^^^^^^^^^ can't be dereferenced

error[E0614]: type `f32` cannot be dereferenced
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_001/target.rs:34:33
   |
34 |     let s2 = **afp2[0] as i32 + **afp2[16] as i32;
   |                                 ^^^^^^^^^^ can't be dereferenced

error[E0614]: type `f32` cannot be dereferenced
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_001/target.rs:81:74
   |
81 |     if takes_params(&vla1, &vla2) != (vla1[0] as i32 + vla1[10] as i32 + **vla2[0] as i32 + **vla2[16] as i32) {
   |                                                                          ^^^^^^^^^ can't be dereferenced

error[E0614]: type `f32` cannot be dereferenced
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_001/target.rs:81:93
   |
81 |     if takes_params(&vla1, &vla2) != (vla1[0] as i32 + vla1[10] as i32 + **vla2[0] as i32 + **vla2[16] as i32) {
   |                                                                                             ^^^^^^^^^^ can't be dereferenced

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0614`.